# renderer

./: .gitignore  .gitmodules  CMakeLists.txt
binding/: binding-canbus-register.c  binding-canbus.c  binding-gpio.c  binding-idle.c  renderer-idle.c
binding/wasm/: CMakeLists.txt  renderer-binding.c  renderer-binding.h  renderer-idle.c  renderer-idle.h
default-scene/: default.dashboard
default-scene/code/: dashboard-constants.h  dashboard-definition.c  scene-default.c
doc/: Timming.txt
fpga/design/clock/: Clock-50_35.v  Clock-51_00.v  Clock-65_25.v
fpga/design/constraints/: Final.pcf  Prototype2.pcf
fpga/design/core/: Final.v  MCUInterface.v  Prototype1.v  Prototype2.v  VideoCore.v  VideoCore2-old.v  VideoCore2.v
fpga/design/memory/: FLASHController.v  FLASHControllerMock.v  FLASHTimingController.v  QueueMemory.v  VRAMController.v
fpga/design/renderer/: CommandProcessor.v  Renderer.v  RendererMixer.v  RendererRectFill.v  RendererRectMix.v  RendererTextureMix.v  RenderingController.v
fpga/design/system/: BufferController.v  DeviceController.v  FIFO.v  QueueController.v  SPIController.v  StatusController.v  StorageController.v  SystemController.v
fpga/design/uart/: MCUController.v  UARTDecoder.v  UARTEncoder.v  UART_RX.v  UART_TX.v  Uart.v  UartRX.v  UartTX.v
fpga/design/video/: PlaybackController.v  (+8 more)
include/: binding-canbus-definition.h  binding-canbus.h  binding-gpio.h  binding-idle.h  platform-gpio.h  renderer-canbus.h  renderer-definition.h  renderer-gpio.h  renderer-idle.h  renderer-scene.h  renderer-types.h  renderer.h  scene-decoder.h  video-core-hw.h  video-core.h
renderer/: renderer-display.c  renderer-scene.c
scripting/: library.c  scripting.c  scripting.h  zfconf.h
src/: CMakeLists.txt  renderer-display.c  renderer-idle.c  renderer-scene.c  renderer.c  scripting.c  zfconf.h
src/opengl/: opengl.c  window.h
src/scene-decoder/: decoder.c  decoder.h  scene-decoder.c
src/video-core/: data-upload.c  data-upload.h  fpga-bit-stream.c  video-core-hw-linux.c  video-core-hw-pic32.c  video-core.c
test/: CMakeLists.txt  main.c
test/egl/: main.c  opengl.c  window.c
test/impl/: CMakeLists.txt  ri-constants.h  ri-structure.c  ri-texts.c
test/vc/: main.c  serial.c  serial.h
